--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.3.5",
     "react-icons": "^4.2.0",
     "react-intersection-observer": "^8.31.1",
     "styled-components": "^5.2.3"
