--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^4.1.11",
     "next": "10.1.3",
     "react": "17.0.2",
+    "react-device-detect": "^1.17.0",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.3.5",
     "react-icons": "^4.2.0",
