--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@stripe/stripe-js": "^1.14.0",
     "body-scroll-lock": "^3.1.5",
     "framer-motion": "^4.1.11",
-    "next": "10.1.3",
+    "next": "^10.2.0",
     "react": "17.0.2",
     "react-device-detect": "^1.17.0",
     "react-dom": "17.0.2",
